--- a/package.json
+++ b/package.json
@@ -9,10 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@prisma/client": "4.7.1",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "2.4.3",
+    "bootstrap": "^5.2.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-auth": "4.18.6",
+    "rc-slider": "^10.2.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-datepicker": "4.8.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "prisma": "4.7.1"
   }
 }
